# skelfir

./: LICENSE  README.md
skelfir-api/: LICENSE  Pipfile  Pulumi.yaml  README.md  __main__.py  app.yaml  cert.pem  dockerfile  key.pem  local-cluster-config.yml  makefile  plot_quakes.py  pyproject.toml  test_data.json
skelfir-api/app/: app.py  config.py  db.py  log_config.yml  logutils.py  quakes.py  vedur.py
skelfir-api/app/html/: index.html  index2.html  magnitude.html  slider.css
skelfir-api/app/routes/: quakes.py
skelfir-api/helm/: Chart.yaml  values-dev.yaml  values-local.yaml  values.yaml
skelfir-api/helm/templates/: _helpers.tpl  deployment.yaml  ingressroute.yaml  service.yaml
skelfir-api/streamer/: streamer.py
skelfir-app/: README.md  capacitor.config.json  dockerfile  index.html  makefile  oldskelfirindex.html  package-lock.json  package.json
skelfir-app/android/app/: build.gradle  capacitor.build.gradle
skelfir-app/helm/: Chart.yaml  values.yaml
skelfir-app/helm/templates/: deployment.yaml  service.yaml
skelfir-app/src/: App.vue  main.js  notifier.js
skelfir-app/src/components/: Chart.vue  Controls.vue  Map.vue  Menu.vue  Popups.vue
skelfir-app/src/stores/: counter.js
skelfir-infra/: Pulumi.dev.yaml  Pulumi.local.yaml  Pulumi.yaml  README.md  __main__.py  get_kube_config  local-cluster-config.yml  makefile  pyproject.toml  support-pod-2.yaml  support-pod.yaml  test-deployment.yaml  testservice.yaml  utils.py
skelfir-infra/.github/workflows/: deploy_on_comment.yml  pull_request.yml  push.yml
skelfir-infra/configs/: betterstack-values.yaml  contour-values.yaml  kubeconfig-template.yaml  metrics-server-values.yaml
skelfir-infra/infra/misc/: cluster.py  nodepool.py
skelfir-infra/infra/providers/: k3d.py  kind.py
skelfir-infra/infra/stacks/dev/: __init__.py
skelfir-infra/infra/stacks/local/: __init__.py
skelfir-infra/modules/infra/: __init__.py  certificate.py  cluster.py  db.py  network.py  registry.py
skelfir-infra/modules/kubernetes/: kubeconfig.py  namespace.py  provider.py
skelfir-infra/modules/kubernetes/helm/: ingress.py  metrics.py  monitoring.py
skelfir-infra/providers/: k3d.py
(+2 files in other folders)
