[tool.poetry]
name = "skelfir-api"
version = "0.1.0"
description = ""
authors = ["Logi Leifsson <logileifs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.23.3"
aiofiles = "^22.1.0"
uvicorn = "^0.20.0"
starlette = "^0.23.1"
websockets = "^10.4"
webargs-starlette = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
