[tool.poetry]
name = "skelfir-api"
version = "0.1.0"
description = ""
authors = ["Logi Leifsson <logileifs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.23.3"
aiofiles = "^22.1.0"
uvicorn = "^0.20.0"
starlette = "^0.23.1"
websockets = "^10.4"
webargs-starlette = "^2.1.0"
pyyaml = "^6.0.1"
rethinkdb = "^2.4.10"
looseversion = "^1.3.0"


[tool.poetry.group.dev.dependencies]
pymongo = "^4.6.0"
ipython = "^8.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
