[tool.poetry]
name = "skelfir-infra"
version = "0.1.0"
description = ""
authors = ["Logi Leifsson <logileifs@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "skelfir_infra"}]

[tool.poetry.dependencies]
python = "^3.9"
pulumi = "^3.94.2"
pulumi-docker = "^4.5.0"
pulumi-random = "^4.14.0"
pulumi-kubernetes = "^3.21.4"
pulumi-digitalocean = "^4.16.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
